Adjust some spacing issues

--- a/css/main.css
+++ b/css/main.css
@@ -30,6 +30,11 @@ svg {
   margin-right: 1.3rem;
 }
 
+h1 {
+  margin-left: 1.3rem;
+  margin-right: 1.3rem;
+}
+
 @media only screen and (min-width: 60em) {
 
   .bubbles, .domes {
@@ -42,4 +47,8 @@ svg {
     margin-right: 0;
   }
 
+}
+
+.max-length {
+  max-width: 60em;
 }
